--- a/products/src/index.css
+++ b/products/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.blogForm {
+  margin:30px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.postTitle {
+  font-weight: 600;
+  margin-left: 10px;
+}
+.postBody {
+  margin-left: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
